# LakeBench

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: publish_to_pypi.yml  tests.yml
docs/benchmarks/: duckdb.md
examples/: data_generation.ipynb  data_generation.py  local_quickstart.ipynb  run_benchmark.py
examples/benchmarks/: daft.ipynb  duckdb.ipynb  fabric_spark.ipynb  hdi_spark.ipynb  polars.ipynb  sail.ipynb  spark.ipynb  synapse_spark.ipynb
reports/coverage/: daft.md  polars.md  sail.md  spark.md
src/lakebench/benchmarks/: base.py
src/lakebench/benchmarks/_load_and_query/: _load_and_query.py
src/lakebench/benchmarks/_tpc/: _tpc.py
src/lakebench/benchmarks/atomic_elt/: __init__.py  atomic_elt.py
src/lakebench/benchmarks/atomic_elt/engines/: daft.py  duckdb.py  polars.py  spark.py
src/lakebench/benchmarks/clickbench/: clickbench.py
src/lakebench/benchmarks/clickbench/engine_impl/: daft.py  duckdb.py  polars.py
src/lakebench/benchmarks/clickbench/resources/queries/sail/: q23.sql  q29.sql
src/lakebench/benchmarks/elt_bench/: elt_bench.py
src/lakebench/benchmarks/elt_bench/engine_impl/: daft.py  duckdb.py  polars.py  sail.py  spark.py
src/lakebench/benchmarks/tpcds/: tpcds.py  tpcdsh.py
src/lakebench/benchmarks/tpcds/engines/: daft.py  spark.py
src/lakebench/benchmarks/tpcds/resources/: tpcds_queries.py
src/lakebench/benchmarks/tpcds/resources/ddl/: ddl_v3.2.0.sql
src/lakebench/benchmarks/tpcds/resources/queries/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14a.sql  q14b.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q23a.sql  q23b.sql  q24a.sql  q24b.sql  q25.sql  q3.sql  q30.sql  q36.sql  q39a.sql  q39b.sql  q4.sql  q5.sql  q58.sql  q6.sql  q65.sql  q7.sql  q70.sql  q72.sql  q8.sql  q81.sql  q86.sql  q90.sql
src/lakebench/benchmarks/tpcds/resources/queries/canonical/: q90.sql
src/lakebench/benchmarks/tpcds/resources/queries/sail/: q36.sql  q44.sql  q49.sql  q67.sql  q70.sql  q86.sql
src/lakebench/benchmarks/tpch/: tpch.py
src/lakebench/benchmarks/tpch/resources/queries/: q10.sql  q11.sql  q12.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q3.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
src/lakebench/datagen/: _tpc.py  _tpc_rs.py  clickbench.py  tpcds.py  tpch.py
src/lakebench/engines/: base.py  daft.py  delta_rs.py  duckdb.py  fabric_spark.py  polars.py  sail.py  spark.py  synapse_spark.py
src/lakebench/utils/: __init__.py  path_utils.py  timer.py
tests/: test_engine.py  test_path_utils.py  test_query_utils.py
tests/integration/: README.md  conftest.py  test_daft.py  test_duckdb.py  test_sail.py  test_tpc_daft.py  test_tpc_duckdb.py  test_tpc_polars.py  test_tpc_sail.py  test_tpc_spark.py
tests/integration/data/: clickbench_sample.parquet
