[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lakebench"
version = "0.1.16"
dependencies = [
    "numpy",
    "pyarrow>=15.0.0",
    "deltalake==0.18.2",
    "sqlglot==26.30.0"
]

[project.optional-dependencies]
duckdb = ["duckdb==1.3.1"]
polars = ["polars==1.30.0"]
daft = ["getdaft==0.4.18"]
all = ["duckdb==1.3.1", "polars==1.30.0", "getdaft==0.4.18"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
# Include SQL files src directory
"lakebench" = ["**/*.sql"]

[tool.setuptools.packages.find]
where = ["src"]