[project]
name = "lakebench"
version = "0.13.3"
authors = [
    { name="Miles Cole" },
]
license = {file = "LICENSE"}
description = "A multi-modal Python library for benchmarking Azure lakehouse engines and ELT scenarios, supporting both industry-standard and novel benchmarks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "numpy>=1.24.4",
    "sqlglot==26.30.0",
    "fsspec==2025.2.0",
    "tenacity>=8.2.3,<9; python_version < '3.9'",
    "tenacity==9.1.2; python_version >= '3.9'"
]

[project.optional-dependencies]
duckdb = ["duckdb==1.4.4; python_version >= '3.9'", "deltalake==1.3.3; python_version >= '3.10'", "pyarrow>=15.0.0; python_version >= '3.9'"]
polars = ["polars==1.38.1; python_version >= '3.10'", "deltalake==1.3.3; python_version >= '3.10'", "pyarrow>=15.0.0; python_version >= '3.9'"]
daft = ["daft==0.7.3; python_version >= '3.10'", "deltalake==1.3.3; python_version >= '3.10'", "pyarrow>=15.0.0; python_version >= '3.10'"]
tpcds_datagen = ["duckdb==1.4.4; python_version >= '3.9'", "pyarrow>=15.0.0; python_version >= '3.9'"]
tpch_datagen = ["tpchgen-cli>=2.0.1"]
sparkmeasure = ["sparkmeasure==0.24.0"]
spark = ["pyspark>=3.5.0,<4.0.0; python_version >= '3.9'", "pyarrow>=15.0.0; python_version >= '3.9'"]
sail = ["pysail>=0.4.2; python_version >= '3.9'", "pyspark[connect]>=4.0.0; python_version >= '3.9'", "deltalake>=1.2.1; python_version >= '3.9'", "pyarrow>=15.0.0; python_version >= '3.9'"]

[project.urls]
github = "https://github.com/mwc360/LakeBench"
Issues = "https://github.com/mwc360/LakeBench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lakebench"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv]
conflicts = [
    [{ extra = "spark" }, { extra = "sail" }],
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that generate data and run full benchmarks (require optional extras)",
]
